2006-02-22  Nate Nielsen  <nielsen@memberwebs.com>

    * data/seahorse.schemas.in:
    * libseahorse/seahorse-gconf.h:
    * libseahorse/seahorse-prefs.c:
    * plugins/applet/GNOME_SeahorseApplet.server.in.in:
    * plugins/applet/GNOME_SeahorseApplet.xml:
    * plugins/applet/seahorse-applet.c: Rework of applet. Simplify props.
    Make secure memory work properly. Delay initialization till first
    operation. Style and compile fixes.
    
2006-02-19  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-pgp-key-op.c: Fix state machine for signing keys.
    Patch by Daniel Rodriguez Garcia.  (Bug #319409)

2006-02-17  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * plugins/gedit/Makefile.am:
    * plugins/gedit/seahorse-gedit-bonobo.c:
    * plugins/gedit/seahorse-gedit-plugin.c:
    * plugins/gedit/seahorse-gedit.c:
    * plugins/gedit/seahorse-gedit.h:
    * plugins/gedit/seahorse-pgp.gedit-plugin.desktop.in: 
    Adapt gedit plugin to gedit 2.14 plugin API. Bug #328330
    
2006-01-31  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-key-properties.glade:
    * src/seahorse-key-properties.c:
    * src/seahorse-expires.glade:
    * src/seahorse-expires.c: Fixes expiration dialogs
    and makes data labels selectable. (Bug #325239) 
    (Bug #329298)    

2006-01-30  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-key-properties.c:
    * src/seahorse-pgp-public-key-properties.glade: Correct 
    visibility and labels. (Bug #329151)

2006-01-29  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-key-properties.c:
    * src/seahorse-pgp-public-key-properties.glade: Correct 
    visibility and labels.(Bug #329151)

2006-01-24  Adam Schreiber  <sadam@clemson.edu>

    * HACKING: updated file
    * Makefile.am: Added MAINTAINERS and HACKING to EXTRA_DIST
    * libseahorse/seahorse-pgp-key.c: Fix critical warning
    (Bug #328472)
    * plugins/nautilus/seahorse-pgp-preferences.desktop.in: