@@ -1,5 +1,11 @@
 2006-02-22  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * plugins/applet/gedit/seahorse-gedit-bonobo.c:
+    * plugins/applet/gedit/seahorse-gedit-plugin.c: Delay initialization of
+    SeahorseContext to first usage to speed up loading of gedit.
+    
+2006-02-22  Nate Nielsen  <nielsen@memberwebs.com>
+
     * data/seahorse.schemas.in:
     * libseahorse/seahorse-gconf.h:
     * libseahorse/seahorse-prefs.c:
